@@ -49,6 +49,7 @@ android {
     val entourageURLStaging = "https://api-preprod.entourage.social/api/v1/"
     val deepLinksSchemeProd = "entourage"
     val deepLinksSchemeStaging = "entourage-staging"
+    val deepLinksSchemeDebug = "entourage-debug"
     val deepLinksURLProd = "www.entourage.social"
     val deepLinksURLStaging = "preprod.entourage.social"
 
@@ -106,6 +107,12 @@ android {
         buildConfigField("String", "ENTOURAGE_URL", "\"${entourageURLProd}\"")
         buildConfigField("String", "TEST_ACCOUNT_LOGIN", localTestAccountLogin)
         buildConfigField("String", "TEST_ACCOUNT_PWD", localTestAccountPwd)
+    }
+
+    testOptions {
+        unitTests.all {
+            it.jvmArgs("-XX:+EnableDynamicAgentLoading")
+        }
     }
 
     signingConfigs {
@@ -176,10 +183,9 @@ android {
             applicationIdSuffix = ".debug"
             manifestPlaceholders += mapOf(
                 "deepLinksHostName" to deepLinksURLStaging,
-                "deepLinksScheme" to deepLinksSchemeStaging
-            )
+                "deepLinksScheme" to deepLinksSchemeDebug)
             buildConfigField("String", "ENTOURAGE_URL", "\"${entourageURLStaging}\"")
-            buildConfigField("String", "DEEP_LINKS_SCHEME", "\"${deepLinksSchemeStaging}\"")
+            buildConfigField("String", "DEEP_LINKS_SCHEME", "\"${deepLinksSchemeDebug}\"")
             buildConfigField("String", "DEEP_LINKS_URL", "\"${deepLinksURLStaging}\"")
             buildConfigField("int", "PEDAGO_CREATE_EVENT_ID", "32")
             buildConfigField("int", "PEDAGO_CREATE_GROUP_ID", "33")
